# lab1_actions

./: CMakeLists.txt  main.cpp  test_version.cpp
.github/workflows/: release.yml
